--- a/src/style.css
+++ b/src/style.css
@@ -12,8 +12,9 @@ body {
 
 #userInputFormButtons {
     display: flex;
-    gap: 80px;
-    justify-content: center;
+    gap: 30px;
+    flex-direction: row;
+    justify-content: left;
     align-items: center;
     margin-top: 30px;
 }
